# Maki

./: .gitignore  CMakeLists.txt  README.md  install.sh  io.github.FluxMusic.Maki.desktop  io.github.FluxMusic.Maki.servicemenu.desktop  uninstall.sh
src/: CMakeLists.txt  Main.qml  main.cpp
src/backend/: ImageProvider.h  WindowManager.cpp  WindowManager.h
src/mpv/: MpvItem.cpp  MpvItem.h
src/qml/: AudioPreview.qml  DocumentPreview.qml  FallbackPreview.qml  ImagePreview.qml  TextPreview.qml  VideoPreview.qml
